Optimize DatabaseCleanupService
- Added @Async and initialDelay to logDatabaseStats() to prevent startup lag
- Retained scheduled cleanup of expired book cache at 2 AM
- Ensures non-blocking hourly stats logging